<resources>
    <!-- General  -->
    <string name="app_name">wizard-project</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="entrant_fragment_label">Entrant Fragment</string>
    <string name="organizer_fragment_label">Organizer Fragment</string>
    <string name="admin_fragment_label_images">Admin Image Fragment</string>
    <string name="admin_fragment_label">Admin Fragment</string>
    <string name="profile_fragment_label">Profile Fragment</string>
    <string name="edit_profile_fragment_label">Edit Profile Fragment</string>

    <!-- Buttons -->
    <string name="enter_event_string">Enter Event</string>
    <string name="create_manage_facility_string">Create/Manage Facility</string>
    <string name="admin_string">Admin</string>
    <string name="profile_pic_delete">Remove Profile Picture</string>
    <string name="save_button">Save</string>
    <string name="delete_profile_button">Delete Profile</string>
    <string name="delete_facility_button">Delete Facility</string>
    <string name="qrCodebutton">QR Code Scanner</string>
    <string name="doneButton">Done</string>
    <string name="edit_facility_button">Edit Facility</string>
    <string name="cancel_entrant">Cancel Entrant</string>
    <string name="send_notification">Send Notification</string>
    <string name="sample_attendees">Sample Attendees</string>
    <string name="upload_poster">Upload Poster</string>
    <string name="view_facility">View Facility</string>
    <string name="edit_event_button">Edit Event</string>
    <string name="entrant_list">Entrant List</string>
    <string name="map_view">Map View</string>
    <string name="view_qr_code">View QR Code</string>
    <string name="delete_event_button">Delete Event</string>
    <string name="delete_event_qr_data_button">Delete QR Code Data</string>
    <string name="view_facility_button">View Facility</string>
    <string name="view_waitlist_button">Waitlist</string>
    <string name="view_qr_code_button">View QR Code</string>
    <string name="view_map_button">Map View</string>
    <string name="join_waiting_list_button">Join Waiting List</string>
    <string name="leave_waiting_list_button">Leave Waiting List</string>
    <string name="back_button">Back</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="download_qr_code">Download QR Code</string>
    <string name="redraw_attendees_button">Redraw Attendees</string>
    <string name="accept_invitation_button">Accept Invitation</string>
    <string name="deny_invitation_button">Deny Invitation</string>

    <!-- Titles -->
    <string name="camera_title">Camera</string>
    <string name="menu_title">Menu</string>
    <string name="view_events_title">View Events</string>
    <string name="home_title">Home</string>
    <string name="add_event_title">Add Event</string>
    <string name="image_title">Images</string>
    <string name="profile_title">Profiles</string>
    <string name="file_title">Events</string>
    <string name="facility_title">Facilities</string>

    <!-- Text -->
    <string name="eventwizard_text">EventWizard</string>
    <string name="or_text">OR</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="dash_text">-</string>

    <!-- Descriptions -->
    <string name="eventwizard_logo_desc">EventWizard Logo</string>
    <string name="profile_picture_button_desc">Profile Picture Button</string>
    <string name="profile_picture_desc">Profile Picture</string>
    <string name="facility_image_desc">Facility Image</string>
    <string name="event_image_desc">Event Image</string>
    <string name="edit_picture_icon_desc">Edit Icon</string>
    <string name="upload_image_text">Upload Image</string>
    <string name="price_icon_desc">Price Icon</string>
    <string name="max_entrants_icon_desc">Max Entrants</string>
    <string name="geolocation_icon_desc">Event Description</string>
    <string name="registration_icon_desc">Registration Icon</string>
    <string name="edit_profile_picture_icon_desc">Edit profile picture icon</string>
    <string name="qr_code_image_desc">QR Code Image</string>

    <!-- Edit Profile -->
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone Number</string>

    <!-- Edit Event -->
    <string name="upload_poster_label">Upload Poster</string>
    <string name="event_name_label">Event Name</string>
    <string name="event_description_label">Description</string>
    <string name="max_entrants_label">Max Entrants</string>
    <string name="event_price_label">Price</string>
    <string name="waiting_list_label">Waiting List</string>
    <string name="deadline_label">Deadline</string>
    <string name="select_a_date">Select a Date</string>
    <string name="geolocation_label">Geolocation</string>
    <string name="registration_dates_label">Registration Dates</string>
    <string name="admin_fragment_label_event">admin_fragment_label_event</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="delete_event_image">Delete Event Image</string>
    <string name="enter_event_price">Enter Price</string>
    <string name="enter_event_description">Enter Event Description</string>
    <string name="event_max_entrants_label">Max Entrants</string>
    <string name="enter_event_max_entrants">Enter Max Entrants</string>
    <string name="geolocation_required">Geolocation Required</string>
    <string name="event_registration_label">Registration</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="event_location">Event Location</string>
    <string name="event_max_entrants">Event Max Entrants</string>"
    <string name="event_deadline">Event Deadline</string>

    <!-- Edit Facility -->
    <string name="textview_facility_name">Facility Name</string>
    <string name="textview_facility_location">Facility Location</string>
    <string name="facility_name_label">Facility Name</string>
    <string name="facility_location_label">Facility Location</string>
    <string name="admin_fragment_label_facility">admin_fragment_label_facility</string>
    <string name="edit_facility_name">Enter Facility Name</string>
    <string name="edit_facility_location">Enter Facility Location</string>
    <string name="delete_facility_image">Delete Facility Image</string>
    <string name="enter_facility_name">Enter Facility Name</string>
    <string name="enter_facility_location">Enter Facility Location</string>
    <string name="facility_name">Facility Name</string>
    <string name="facility_location">Facility Location</string>
    <string name="select_date_button">Select Date</string>

    <!-- Filters -->
    <string name="waitlisted_text">Waitlisted</string>
    <string name="selected_text">Selected</string>
    <string name="not_selected_text">Not Selected</string>
    <string name="cancelled_text">Cancelled</string>
    <string name="all_text">All</string>
    <string name="world_map_desc">World Map</string>
    <string name="enrolled_text">Enrolled</string>
</resources>
