<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.wizard_project.Fragments.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <!-- Enter Event Button -->
        <action
            android:id="@+id/action_HomeFragment_to_EntrantFragment"
            app:destination="@id/EntrantFragment" />

        <!-- Manage Facility Button -->
        <action
            android:id="@+id/action_HomeFragment_to_OrganizerFragment"
            app:destination="@id/OrganizerFragment" />

        <!-- Admin Button -->
        <action
            android:id="@+id/action_HomeFragment_to_AdminFragment"
            app:destination="@id/AdminFragment" />
    </fragment>

    <!-- Entrant Fragment -->
    <fragment
        android:id="@+id/EntrantFragment"
        android:name="com.example.wizard_project.Fragments.EntrantFragment"
        android:label="@string/entrant_fragment_label"
        tools:layout="@layout/fragment_entrant">

        <!-- Profile Button -->
        <action
            android:id="@+id/action_EntrantFragment_to_ProfileFragment"
            app:destination="@+id/ProfileFragment" />
    </fragment>

    <!-- Organizer Fragment -->
    <fragment
        android:id="@+id/OrganizerFragment"
        android:name="com.example.wizard_project.Fragments.OrganizerFragment"
        android:label="@string/organizer_fragment_label"
        tools:layout="@layout/fragment_organizer">
    </fragment>

    <!-- Admin Fragment -->
    <fragment
        android:id="@+id/AdminFragment"
        android:name="com.example.wizard_project.Fragments.AdminFragment"
        android:label="@string/admin_fragment_label"
        tools:layout="@layout/fragment_admin">
    </fragment>

    <!-- Profile Fragment -->
    <fragment
        android:id="@+id/ProfileFragment"
        android:name="com.example.wizard_project.Fragments.ProfileFragment"
        android:label="@string/profile_fragment_label"
        tools:layout="@layout/fragment_profile">

        <!-- Edit Profile Button -->
        <action
            android:id="@+id/action_ProfileFragment_to_EditProfileFragment"
            app:destination="@+id/EditProfileFragment" />
    </fragment>

    <!-- Edit Profile Fragment -->
    <fragment
        android:id="@+id/EditProfileFragment"
        android:name="com.example.wizard_project.Fragments.EditProfileFragment"
        android:label="@string/edit_profile_fragment_label"
        tools:layout="@layout/fragment_edit_profile">

        <!-- Save Button (sends user back to ProfileFragment) -->
        <action
            android:id="@+id/action_EditProfileFragment_to_ProfileFragment"
            app:destination="@+id/ProfileFragment" />
    </fragment>
</navigation>