<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="Fragments.ViewEventFragment">

    <!-- Event Image -->
    <ImageView
        android:id="@+id/imageview_event_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/event_image_desc"
        android:src="@drawable/example_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Event Name -->
    <TextView
        android:id="@+id/textview_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name_label"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_event_image"
        app:layout_constraintVertical_bias="0.1" />

    <!-- Event Description -->
    <TextView
        android:id="@+id/textview_event_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:minLines="2"
        android:text="@string/event_description_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_event_name"
        tools:text="This is an example of a description text for the event. It is two lines long." />

    <!-- Event Price -->
    <LinearLayout
        android:id="@+id/price_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_event_description">

        <!-- Event Price Icon -->
        <ImageView
            android:id="@+id/imageview_price_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/price_icon_desc"
            android:src="@drawable/price_icon" />

        <!-- Event Price Text -->
        <TextView
            android:id="@+id/textview_event_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/event_price_label"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Event Max Entrants -->
    <LinearLayout
        android:id="@+id/max_entrants_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_section">

        <!-- Event Max Entrants Icon -->
        <ImageView
            android:id="@+id/imageview_max_entrants_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/max_entrants_icon_desc"
            android:src="@drawable/max_entrants_icon" />

        <!-- Event Max Entrants Text -->
        <TextView
            android:id="@+id/textview_max_entrants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/max_entrants_label"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Event Geolocation Requirement -->
    <LinearLayout
        android:id="@+id/geolocation_requirement_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/max_entrants_section">

        <!-- Event Geolocation Icon -->
        <ImageView
            android:id="@+id/imageview_geolocation_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/geolocation_icon_desc"
            android:src="@drawable/geolocation_icon" />

        <!-- Event Geolocation Requirement Text -->
        <TextView
            android:id="@+id/textview_geolocation_requirement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/geolocation_label"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Event Registration Dates -->
    <LinearLayout
        android:id="@+id/registration_dates_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/geolocation_requirement_section">

        <!-- Event Geolocation Icon -->
        <ImageView
            android:id="@+id/imageview_registration_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/registration_icon_desc"
            android:src="@drawable/registration_icon" />

        <!-- Event Geolocation Requirement Text -->
        <TextView
            android:id="@+id/textview_registration_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/registration_dates_label"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Entrant List Button -->
    <Button
        android:id="@+id/button_view_entrants"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/entrant_list"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_dates_section" />

    <!-- View Facility Button -->
    <Button
        android:id="@+id/button_view_facility"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/view_facility_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_view_entrants" />

    <!-- View QR Code Button -->
    <Button
        android:id="@+id/button_view_qr_code"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/view_qr_code_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_view_entrants" />

    <!-- Map View Button -->
    <Button
        android:id="@+id/button_view_map"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/view_map_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_view_qr_code" />

    <!-- Edit Event Button -->
    <Button
        android:id="@+id/button_edit_event"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/edit_event_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_view_map" />

    <!-- Admin Delete Event Button-->
    <Button
        android:id="@+id/button_delete_event"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/delete_event_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_dates_section" />

    <!-- Admin Delete QR Code Data Button-->
    <Button
        android:id="@+id/button_delete_event_qr_data"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/delete_event_qr_data_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_delete_event" />

    <!-- Entrant Join Waitlist Button-->
    <Button
        android:id="@+id/button_join_waiting_list"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/join_waiting_list_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_view_facility" />

    <!-- Entrant Leave Waitlist Button-->
    <Button
        android:id="@+id/button_leave_waiting_list"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/leave_waiting_list_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_join_waiting_list" />


    <!-- Entrant Accept Invitation Button-->
    <Button
        android:id="@+id/button_accept_invitation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/accept_invitation_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_view_facility" />

    <!-- Entrant Deny Invitation Button-->
    <Button
        android:id="@+id/button_deny_invitation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/lighter_purple"
        android:text="@string/deny_invitation_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_accept_invitation" />
</androidx.constraintlayout.widget.ConstraintLayout>
