<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".Fragments.EditProfileFragment">

    <!-- Content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Profile Picture -->
        <ImageView
            android:id="@+id/editProfileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/event_wizard_logo"
            android:contentDescription="@string/profile_picture_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <!-- Edit Name Field -->
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:textSize="18sp"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/editProfileImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <!-- Edit Email Field -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/editTextName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Edit Phone Field -->
        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:textSize="18sp"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Save Button -->
        <Button
            android:id="@+id/buttonSaveProfile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/lighter_purple"
            app:layout_constraintTop_toBottomOf="@id/editTextPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>